; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_vnodePeer.spec.c_vnodeOpenPeerVnode.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_vnodePeer.spec.c_vnodeOpenPeerVnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32 }

@vnodeList = common dso_local global %struct.TYPE_6__* null, align 8
@TSDB_STATUS_UNSYNCED = common dso_local global i32 0, align 4
@TSDB_STATUS_MASTER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"vid:%d, vnode status:%d numOfPeers:%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vnodeOpenPeerVnode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** @vnodeList, align 8
  %5 = load i32, i32* %2, align 4
  %6 = sext i32 %5 to i64
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i64 %6
  store %struct.TYPE_6__* %7, %struct.TYPE_6__** %3, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp sgt i32 %11, 1
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @TSDB_STATUS_UNSYNCED, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @TSDB_STATUS_MASTER, align 4
  br label %17

17:                                               ; preds = %15, %13
  %18 = phi i32 [ %14, %13 ], [ %16, %15 ]
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %2, align 4
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %28, 1
  %30 = call i32 @dTrace(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %21, i32 %24, i32 %29)
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %32 = call i32 @vnodeUpdateStreamRole(%struct.TYPE_6__* %31)
  ret i32 0
}

declare dso_local i32 @dTrace(i8*, i32, i32, i32) #1

declare dso_local i32 @vnodeUpdateStreamRole(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
